# tusktsk

./: .dockerignore  .env.example  .gitignore  7-16-action-plan.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_PLAN.md  DOCKER.md  Dockerfile.dotnet  Dockerfile.go  Dockerfile.nodejs  Dockerfile.php  Dockerfile.python  Dockerfile.ruby  Dockerfile.rust  INSTALL.md  LICENSE  PACKAGE_LINKS.md  README.md  REALISTIC_ROADMAP.md  ROADMAP.md  SUMMARY.md  a_ch  check-stats.sh  checklist.sh  composer.json  deploy-all-packages.sh  docker-compose.yml  fix-pkg-domains.sh  g.sh  gd.sh  git.sh  gitTrick.sh  go.mod  malformed.tsk  operator_test.tsk  production_test.tsk  setup-cyberboost.sh  setup-tokens.sh  (+8 more)
cheat-sheet/: javascript-cheat-sheet.md  php-cheat-sheet.md
deploy/: all.sh
distributions/: DISTRIBUTION_SUMMARY.md
docs/: README.md  api.md  community.md  emergency-procedures.md  features.md  installation.md  license.md  oauth2-integration.md  public_user_guide.md  troubleshooting.md
docs-branch/: 07-21-2025-go-sdk-deployment-summary.md  07-21-2025-sdk-deployment-summary.md  CLAUDE.md  GITHUB_SETUP_SUMMARY.md
fujsen/: HOW-TO-AI.md  README.md  api-router.php  autoload.php  install-fujsen.sh  start-fujsen.sh  test-enhanced.php  test-simple-enhanced.php
how-to-tusk/: 001-what-is-tusklang.md  002-philosophy.md  003-installation-ubuntu.md  004-installation-docker.md  005-installation-macos.md  006-installation-windows.md  007-verify-installation.md  008-hello-world.md  009-file-structure.md  010-cli-overview.md  011-comments.md  012-key-value-basics.md  013-colon-vs-equals.md  014-strings.md  015-numbers.md  016-booleans.md  017-null-values.md  018-arrays.md  019-nested-objects.md  020-inline-objects.md  021-heredoc-strings.md  022-escaping-characters.md  023-indentation.md  024-multiline-values.md  025-typed-values.md  026-references.md  027-variable-naming.md  028-reserved-keywords.md  029-syntax-errors.md  030-best-practices.md  031-at-operator-intro.md  032-at-variable-reference.md  033-at-variable-fallback.md  034-at-request-object.md  035-at-request-method.md  036-at-request-query.md  037-at-request-post.md  038-at-request-headers.md  039-at-session-variables.md  040-at-cookie-variables.md  (+66 more)
legal/: compliance_documentation.md  license.html  license_terms.md  master-sdk.md  master.md  pp.md  tos.md
lib/: BinaryObfuscator.php  CodeIntegrityChecker.php  CssShortcodeExpander.php  OfflineGracePeriod.php  PeanuConfig.php  PeanutsBinary.php  RuntimeLicenseValidator.php  SDKOperationValidator.php  SourceMapProtector.php  TuskBinary.php  TuskDb.php  TuskGraphQL.php  TuskLang.php  TuskLicense.php  TuskObject.php  TuskQuery.php
monitoring/: prometheus.yml
pkg/: BRANDING_REQUIREMENTS.md  CHANGELOG_TEMPLATE.md  DEPLOYMENT_PLAN.md  EMAIL_SETUP.md  LICENSE_SHORT.txt  LICENSE_TEMPLATE.txt  PACKAGE_DESCRIPTIONS.md  PROTECTION_STRATEGY.md  README.md  deploy-all.sh
pkg/python/: pyproject.toml
pkg/rust/: Cargo.toml
prompts/: CLI_DOCS_STRUCTURE_PROMPT.md  COMPLETION_PROMPTS.md  IMPLEMENTATION_STATUS_REPORT.md  INSTALLATION_REVIEW.md  LANGUAGE_CLI_DOC_PROMPT.md  LANGUAGE_IMPLEMENTATION_PROMPT.md  LANGUAGE_PNT_DOC_PROMPT.md  PEANUT_BINARY_SPEC.md  PNT_DOCS_STRUCTURE_PROMPT.md  RUBY_FINAL_FIX_PROMPT.md  SDK_INSPECTION_REPORT.md
reference/: GITHUB_TOKEN_SETUP.md
scripts/: github-release.sh
sdk/: comprehensive-javascript-sdk-completion-summary.md  development-accelerator.sh
sdk/python/: CLI_README.md  LICENSE  README.md  README_PYPI.md  pyproject.toml  python.txt  requirements.txt  setup.py  test-config.pnt  tsk_enhanced.py
sdk/python/adapters/: README.md  __init__.py  enterprise_security_systems.py  mongodb_adapter.py  mysql_adapter.py  redis_adapter.py  sqlite_adapter.py
sdk/python/cli/: main.py
sdk/python/cli/commands/: binary_commands.py
sdk/python/docs/: PNT_GUIDE.md
sdk/python/tests/: test-binary.pnt  test_adapters.db  test_adapters.py  test_all_operators.py  test_enhanced.py  test_operators.py  test_real_operators.py  test_simple_operators.py  test_sqlite.db
sdk/python/tusktsk/: __init__.py  fujsen.py  peanut_config.py  protection.py  tsk.py  tsk_enhanced.py
sdk/python/tusktsk/adapters/: __init__.py  mongodb_adapter.py  postgresql_adapter.py  redis_adapter.py  sqlite_adapter.py
sdk/python/tusktsk/cli/: main.py
sdk/python/tusktsk/cli/commands/: ai_commands.py  binary_commands.py  cache_commands.py  config_commands.py  db_commands.py  dev_commands.py  license_commands.py  peanuts_commands.py  service_commands.py  test_commands.py  utility_commands.py
sdk/python/tusktsk/cli/utils/: config_loader.py
sdk/python/z_flask_tsk/flask_tsk/: __init__.py  setup.py
sdk/python/z_flask_tsk/flask_tsk_package/: =2.0.3  DEPLOYMENT_GUIDE.md  LICENSE  README.md  pyproject.toml  setup.py
sdk/python/z_flask_tsk/flask_tsk_package/flask_tsk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/z_flask_tsk/flask_tsk_package/tsk_flask/: README.md  __init__.py
sdk/python/z_flask_tsk/tsk_flask/: MANIFEST.in  PACKAGE_SUMMARY.md  README_PYPI.md  TUSKLANG_PYTHON_SDK_PROMPT.md  __init__.py  build_and_deploy.sh  grim_tusk_integration.py
sdk/rust/: Cargo.toml  README.md  build-protected.sh
sdk/rust/docs/: PNT_GUIDE.md
sdk/rust/src/: anti_tamper.rs  binary_format.rs  cli.rs  cli_enhanced.rs  error.rs  lib.rs  license.rs  main.rs  parser.rs  parser_enhanced.rs  peanut.rs  protection.rs  value.rs  wasm.rs
sdk/rust/src/commands/: ai.rs  binary.rs  cache.rs  config.rs  css.rs  db.rs  dependency.rs  dev.rs  license.rs  mod.rs  peanuts.rs  security.rs  services.rs  test.rs  utility.rs  web.rs
sdk/rust/src/k8s/: configmap.rs  crd.rs  deployment.rs  mod.rs  monitoring.rs  operator.rs  reconciliation.rs  secrets.rs
sdk/rust/testdata/: enhanced_sample.tsk  sample.tsk
server/: README-LICENSE-SERVER.md  admin-dashboard.js  analytics-api.js  ecosystem.config.js  installation-tracker.js  license-generator.js  monitoring-system.js  package-lock.json  package.json  self-destruct-api.js  server.js  setup-license-server.sh  setup-ssl.sh  test-license-api.sh  (+2 more)
(+4663 files in other folders)
