[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tusktsk"
version = "2.0.0"
authors = [
  { name="Cyberboost LLC", email="zoo@phptu.sk" },
]
description = "TuskTsk - Configuration with a Heartbeat"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://tuskt.sk"
"Bug Tracker" = "https://github.com/cyber-boost/tusktsk/issues"

[tool.setuptools]
packages = ["tusktsk"]