[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tusktsk"
version = "2.0.3"
authors = [
  { name="Cyberboost LLC", email="packages@tuskt.sk" },
]
description = "TuskTsk - Configuration with a Heartbeat. Enhanced with 140+ CLI commands including binary operations and AI management!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "msgpack>=1.0.0",
    "watchdog>=2.0.0",
    "python-magic>=0.4.27",
    "requests>=2.25.0",
    "sqlite3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8"]
databases = ["psycopg2-binary>=2.8", "pymongo>=3.11", "redis>=3.5"]
ai = ["openai>=1.0.0", "anthropic>=0.7.0"]
binary = ["python-magic>=0.4.27", "zlib", "base64"]
full = ["pytest>=6.0", "black", "flake8", "psycopg2-binary>=2.8", "pymongo>=3.11", "redis>=3.5", "openai>=1.0.0", "anthropic>=0.7.0", "python-magic>=0.4.27"]

[project.urls]
"Homepage" = "https://tuskt.sk"
"Bug Tracker" = "https://github.com/cyber-boost/tusktsk/issues"
"License" = "https://tuskt.sk/license"

[tool.setuptools]
packages = ["tusktsk"]

[project.scripts]
tusk = "tusktsk.cli.main:main"