[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tusktsk"
version = "2.0.5"
description = "TuskTsk - Configuration with a Heartbeat. Enhanced with 140+ CLI commands including binary operations and AI management!"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cyberboost LLC", email = "packages@tuskt.sk"}
]
maintainers = [
    {name = "Cyberboost LLC", email = "packages@tuskt.sk"}
]
keywords = ["configuration", "database", "cli", "binary", "ai", "management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8, <4"
dependencies = [
    "msgpack>=1.0.0",
    "watchdog>=2.0.0",
    "python-magic>=0.4.27",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://tuskt.sk"
Documentation = "https://tuskt.sk/docs"
Repository = "https://github.com/cyber-boost/tusktsk"
"Bug Tracker" = "https://github.com/cyber-boost/tusktsk/issues"

[project.scripts]
tsk = "tusktsk.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"] 