[package]
name = "tusktsk"
version = "2.0.1"
edition = "2021"
authors = ["Cyberboost LLC"]
description = "🦀 TuskTsk Enhanced - Ultra-fast Rust configuration parser with maximum syntax flexibility"
license-file = "LICENSE"
repository = "https://github.com/cyber-boost/tusktsk"
homepage = "https://tuskt.sk"
keywords = ["configuration", "parser", "tsk", "tusktsk"]
categories = ["parsing"]

[dependencies]
# Core parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# String manipulation and parsing
regex = "1.0"
nom = "7.0"
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.3"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Performance and utilities
lazy_static = "1.4"
memchr = "2.5"
dirs = "5.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

# SHA2 for content hashing
sha2 = "0.10"

# Security and cryptography
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.21"
hex = "0.4"

# Utilities
once_cell = "1.18"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[lib]
name = "tusktsk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tusk-rust"
path = "src/main.rs"

[features]
default = []
wasm = ["getrandom/js"]
full = ["wasm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] } 