[package]
name = "tusktsk"
version = "2.0.1"
edition = "2021"
authors = ["Cyberboost LLC"]
description = "🦀 TuskTsk Enhanced - Ultra-fast Rust configuration parser with maximum syntax flexibility"
license-file = "LICENSE"
repository = "https://github.com/cyber-boost/tusktsk"
homepage = "https://tuskt.sk"
keywords = ["configuration", "parser", "tsk", "tusktsk"]
categories = ["parsing"]

[dependencies]
# Core parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# String manipulation and parsing
regex = "1.0"
nom = "7.0"
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.3"
notify = "6.1"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Performance and utilities
lazy_static = "1.4"
memchr = "2.5"
dirs = "5.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
log = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Random number generation
rand = "0.8"

# Cryptography and security
sha2 = "0.10"
md5 = "0.7"
pbkdf2 = "0.12"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"

# Utilities
once_cell = "1.18"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

# Serialization formats
toml = "0.8"
csv = "1.2"
quick-xml = "0.31"

# Core dependencies only for goals implementation
# Database and messaging dependencies
# redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
# mongodb = { version = "2.8", features = ["tokio-runtime"] }

# Messaging and communication
# tonic = { version = "0.10", features = ["tls", "prost"] }
# prost = "0.12"
# tokio-tungstenite = "0.20"
# sse = "0.1"

# GraphQL
# graphql_client = "0.13"

# Monitoring and observability
# prometheus = { version = "0.13", features = ["process"] }
# opentelemetry = { version = "0.20", features = ["rt-tokio"] }
# opentelemetry-jaeger = "0.19"
# opentelemetry-zipkin = "0.19"

# Cloud and platform
# aws-sdk-s3 = "1.0"
# aws-sdk-ec2 = "1.0"
# aws-sdk-lambda = "1.0"
# google-cloud-storage = "0.15"

# Security and authentication
# jsonwebtoken = "9.1"
# oauth2 = "4.4"
# ldap3 = "0.11"

# Blockchain
# web3 = "0.19"
# bitcoin = "0.30"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[lib]
name = "tusktsk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tusk-rust"
path = "src/main.rs"

[[test]]
name = "operator_tests"
path = "test-operators/mod.rs"

[features]
default = []
wasm = ["getrandom/js"]
full = ["wasm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] } 