[package]
name = "tusktsk"
version = "2.0.2"
edition = "2021"
authors = ["Cyberboost LLC"]
description = "🦀 TuskTsk Enhanced - Ultra-fast Rust configuration parser with maximum syntax flexibility"
license-file = "LICENSE"
repository = "https://github.com/cyber-boost/tusktsk"
homepage = "https://tuskt.sk"
keywords = ["configuration", "parser", "tsk", "tusktsk"]
categories = ["parsing"]

[dependencies]
# Core parsing and serialization
serde = { version = "2.0.2", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI framework
clap = { version = "2.0.2", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# String manipulation and parsing
regex = "1.0"
nom = "7.0"
chrono = { version = "2.0.2", features = ["serde"] }

# File system operations
walkdir = "2.3"
notify = "6.1"

# WebAssembly support
wasm-bindgen = { version = "2.0.2", optional = true }
js-sys = { version = "2.0.2", optional = true }
web-sys = { version = "2.0.2", features = ["console"], optional = true }
console_error_panic_hook = { version = "2.0.2", optional = true }

# Performance and utilities
lazy_static = "1.4"
memchr = "2.5"
dirs = "5.0"

# Async runtime
tokio = { version = "2.0.2", features = ["full"] }
futures = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "2.0.2", features = ["env-filter"] }
env_logger = "0.10"
log = "0.4"

# HTTP client
reqwest = { version = "2.0.2", features = ["json"] }

# Random number generation
rand = "0.8"

# Cryptography and security
sha2 = "0.10"
md5 = "0.7"
pbkdf2 = "0.12"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"

# Utilities
once_cell = "1.18"
uuid = { version = "2.0.2", features = ["v4"] }
async-trait = "0.1"

# Serialization formats
toml = "0.8"
csv = "1.2"
quick-xml = "0.31"

# Package management dependencies
semver = "1.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
url = "2.4"
mime = "0.3"
tempfile = "3.8"

# XML processing for Maven/NuGet
xml-rs = "0.8"

# Additional HTTP features
multipart = "0.18"

# Platform Integration Dependencies - TEMPORARILY DISABLED FOR CLEAN COMPILATION
# Node.js Integration
# napi = { version = "2.0.2", features = ["async"] }
# napi-derive = "2.14"
# neon = { version = "2.0.2", features = ["napi-6"] }

# Unity Integration
# cxx = "1.0"
# bindgen = "0.68"

# Azure Functions Integration
# azure-functions = "0.11"

# Ruby Integration (choose one to avoid conflicts)
# rutie = "0.8"
# ruby-sys = "0.3"

# Jekyll Integration
# liquid = "0.26"
# tera = "1.19"

# Additional shared platform dependencies
# libc = "0.2"
# dlopen = "0.1"
# libloading = "0.8"

# Infrastructure operator dependencies - TEMPORARILY DISABLED FOR CLEAN COMPILATION
# Database and storage
redis = { version = "2.0.2", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "2.0.2", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
# mongodb = { version = "2.0.2", features = ["tokio-runtime"] } # Temporarily disabled
# deadpool-postgres = "0.10" # Temporarily disabled
# deadpool-redis = "0.13" # Temporarily disabled
rusqlite = { version = "2.0.2", features = ["bundled"] }
# mysql_async = "0.33" # Temporarily disabled
# elasticsearch = "8.18" # Temporarily disabled for clean compilation
# etcd-rs = "1.0" # Temporarily disabled

# Messaging and communication  
tonic = { version = "2.0.2", features = ["tls", "prost"] }
prost = "0.12"
tokio-tungstenite = "0.20"
tokio-stream = "0.1"
hyper = { version = "2.0.2", features = ["full"] }
# async-nats = "0.32" # Temporarily disabled
# lapin = "2.3" # Temporarily disabled  
# deadpool-lapin = "0.10" # Temporarily disabled
# rdkafka = { version = "2.0.2", features = ["cmake-build", "ssl-vendored"] } # Temporarily disabled

# GraphQL - TEMPORARILY DISABLED
# graphql_client = "0.13"
# async-graphql = "5.0"
# graphql-parser = "0.4"

# Monitoring and observability
prometheus = { version = "2.0.2", features = ["process"] }
opentelemetry = { version = "2.0.2", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19"
opentelemetry-zipkin = "0.19"

# Infrastructure and orchestration
k8s-openapi = { version = "2.0.2", features = ["v1_22"] }
kube = { version = "2.0.2", features = ["runtime", "derive"] }
consul = "0.4"
# vaultrs = "0.7" # Temporarily disabled for clean compilation
# temporal-sdk-core = "0.1" # Temporarily disabled for clean compilation

# Cloud and platform (optional features)
# aws-sdk-s3 = "1.0"
# aws-sdk-ec2 = "1.0" 
# aws-sdk-lambda = "1.0"
# google-cloud-storage = "0.15"

# Security and authentication
jsonwebtoken = "9.1"
oauth2 = "4.4"
ldap3 = "0.11"
ring = "0.17"
totp-lite = "2.0"
qrcode = "0.14"
webauthn-rs = "0.5"
dashmap = "5.5"
sha3 = "0.10"
zeroize = { version = "2.0.2", features = ["derive"] }
casbin = "2.2"
# saml2 = "0.3" # Temporarily disabled for clean compilation

# Blockchain (optional features)
# web3 = "0.19"  
# bitcoin = "0.30"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[lib]
name = "tusktsk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tusk-rust"
path = "src/main.rs"

[[test]]
name = "operator_tests"
path = "test-operators/mod.rs"

[features]
default = []
full = ["nodejs", "unity", "azure", "ruby", "jekyll", "package-managers", "wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
nodejs = []
unity = []
azure = []
ruby = []
jekyll = []
package-managers = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "2.0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "2.0.2", features = ["console"] } 